Standalone/jobmanagerservice.yml
apiVersion: v1
kind: Service
metadata:
  name: jobmanager
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  ports:
  - name: rpc
    port: 6123
  - name: blob
    port: 6124
  - name: query
    port: 6125
  - name: ui
    port: 8081
  selector:
    app: flink
    component: master
  sessionAffinity: None
